# abap_spec_assist

./: .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  requirements.txt
backend/app/: auth.py  config.py  docx_parse.py  main.py  mcp_tools.py  originals.py  sessions.py  spec_doc.py
bash/: deploy.sh
common/config/: settings.ini.example
common/src/: config.py
docs/: tz_assistant_plan.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/nginx/: default.conf.template
frontend/src/: App.tsx  ChatPanel.tsx  ExamplesPanel.tsx  LoginScreen.tsx  SessionSidebar.tsx  SpecPreview.tsx  api.ts  icons.tsx  main.tsx  styles.css
k8s/: backend.yaml  checkpoints-pvc.yaml  configmap.yaml  examples-pvc.yaml  frontend.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  qdrant.yaml  secret.yaml
migrations/alembic/: env.py  script.py.mako
tz_agents/: classifier.py  critic.py  diff_analyst.py  interviewer.py  renderer.py  sap_explorer.py  tz_ingestor.py
tz_agents/prompts/: classifier.md  critic_modification.md  critic_new.md  diff_analyst.md  interviewer.md  sap_explorer_modification.md  sap_explorer_new.md  tz_ingestor.md
tz_api/: main.py  models.py  serializers.py
tz_indexer/: classify.py  embed.py  load_to_qdrant.py  parse_docx.py  reindex.py
tz_orchestrator/: conditions.py  graph.py  nodes.py
tz_ui/: index.html  package-lock.json  package.json  tsconfig.json
(+46 files in other folders)
