[project]
name = "abap-spec-assist"
version = "0.1.0"
description = "Помощник написания ТЗ для SAP-консультантов (ABAP spec assistant)"
requires-python = ">=3.14"

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["common/src", "tz_api", "tz_orchestrator", "tz_agents", "tz_indexer"]
extend-exclude = ["migrations/alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["common", "tz_api", "tz_orchestrator", "tz_agents", "tz_indexer"]

[tool.mypy]
python_version = "3.14"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
files = ["common/src", "tz_api", "tz_orchestrator", "tz_agents", "tz_indexer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tz_api/tests", "tz_orchestrator/tests", "tz_agents/tests", "common/tests"]
pythonpath = ["common/src", "."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
]
